<resources>
    <string name="app_name">Tinder</string>
    <string name="female">Female</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="name">name</string>
    <string name="signout">SignOut</string>
    <string name="settings" />
    <string name="Settings">Settings</string>


</resources>